[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcsim"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
    {name = "Simone Gasperini", email = "simone.gasperini4@unibo.it"}
]
dynamic = ["readme", "dependencies"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "requirements.txt"}
